@@ -14,7 +14,7 @@
     </define>
     <define append="true">
       <name>CONFIG::timeStamp</name>
-      <value>'2010/9/26'</value>
+      <value>'2010/10/13'</value>
     </define>
     <source-path append="true">
       <path-element>D:\Work_Data\Lab\Kissy\github\kissy-sandbox\uploader\as3\src</path-element>
